--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,5 +2,24 @@
 h1 {
     font-size: 28px;
     color: black;
+    font-family: 'Nunito', sans-serif;
+}
 
+h2 {
+    font-size: 24px;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+}
+
+h3 {
+    font-size: 20px;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+}
+
+
+p {
+    font-size: 16px;
+    color: black;
+    font-family: 'PT Serif', serif;
 }
