--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,13 @@
 
 h1 {
+    text-align: center;
     font-size: 32px;
     color: black;
     font-family: 'Nunito', sans-serif;
 }
 
 h2 {
+    text-align: center;
     font-size: 28px;
     color: black;
     font-family: 'Nunito', sans-serif;
@@ -22,4 +24,12 @@ p {
     font-size: 20px;
     color: black;
     font-family: 'PT Serif', serif;
+}
+
+#header {
+    margin: 0;
+    padding: 5px;
+    height: 20%;
+    width: 100%;
+    background: darkred;
 }
