--- a/view/test.html
+++ b/view/test.html
@@ -9,11 +9,17 @@
 
 </head>
 <body>
+<div id="container">
 <div id="header">
 <h1>mamamama</h1>
 <h2>bohemian</h2>
 </div>
+<div id="body">
 <h3>rapsody</h3>
-<p>haha</p>
+</div>
+</div>
+<div id="footer">
+    <p>haha</p>
+</div>
 </body>
 </html>
