--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,36 +26,38 @@ p {
     font-family: 'PT Serif', serif;
 }
 
-#content {
-    background-color: orange;
-    min-height: 100px;
-}
-
 #header {
-    min-height: 100px;
     width: 100%;
     padding: 5px;
     background: darkred;
+    min-height: 20%;
 }
 
 #body {
     padding: 5px;
     width: 100%;
-    min-height: 600px;
+    min-height: 80%;
     background: aqua;
 }
 
 #container {
     background-color: green;
-    height: 100%;
-    margin: 0 auto -50px auto;
-    min-width: 560px;
+    height: 90%;
+    min-height: 90%;
+    resize: both;
+    min-width: 100%;
+    margin-bottom: 5px;
+    position: fixed;
+    top: 0;
 }
 
 #footer {
-    min-height: 100px;
-    margin: 0 auto;
+    height: 8%;
+    min-height: 8%;
     background: lightcoral;
+    min-width: 100%;
     padding: 5px;
+    position: fixed;
+    bottom: 0;
 }
 
