--- a/view/test.html
+++ b/view/test.html
@@ -10,13 +10,12 @@
 </head>
 <body>
 <div id="container">
-<div id="header">
-<h1>mamamama</h1>
-<h2>bohemian</h2>
-</div>
-<div id="body">
-<h3>rapsody</h3>
-</div>
+    <div id="header">
+        <p>haha</p>
+    </div>
+    <div id="body">
+        <p>haha</p>
+    </div>
 </div>
 <div id="footer">
     <p>haha</p>
