--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0 auto;
     max-width: 800px;
     padding: 1em 4em;
+    min-width:500px;
 }
 
 #header {
@@ -67,4 +68,12 @@ li a:hover {
     margin: 0px;
     max-width: 100%;
     max-height: 100%;
+}
+
+form {
+    text-align: center;
+}
+
+.searchbox {
+    width: 350px;
 }
