--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ html {
     background: #fff;
 }
 
-body {
+#page {
     background: #fff;
     color: #545454;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -83,5 +83,7 @@ form {
 }
 
 #signUp {
-    margin-left: -100px;
+    margin-left: 10px;
+    display: inline-block;
+    float: right;
 }
