--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ h1 {
     font-family: sans-serif;
 }
 
-ul {
+#menue ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -50,12 +50,12 @@ ul {
     background-color: #333;
 }
 
-li {
+#menue li {
     float: left;
     width: 25%;
 }
 
-li a {
+#menue li a {
     display: block;
     color: white;
     text-align: center;
@@ -64,7 +64,7 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+#menue li a:hover {
     background-color: #111;
 }
 
@@ -89,8 +89,11 @@ a {
     color: white;
 }
 
-.circleBase {
-    border-radius: 50%;
+.boxRound {
+    border-sizing: border-box;
+    width: content-box;
+    border-radius: 3px 15px 3px 15px;
+    background-color: #333;
 }
 
 .type1 {
@@ -101,14 +104,13 @@ a {
     margin-top: 15px;
     display: inline-block;
     float: right;
-    background-color: #333;
 }
 
 .type1:hover {
     background-color: #111;
 }
 
-@media screen and ( max-width: 580px){
+@media screen and ( max-width: 1250px){
     #menue { display: none; }
     #menueicon img{
         display: inline;
@@ -125,7 +127,7 @@ a {
         background-size: cover;
         z-index: 8;
         position: fixed;
-        top: 10%;
+        top: 0;
         bottom: 0;
         right: 0;
         left: 0;
@@ -135,17 +137,31 @@ a {
         align-content: center;
         text-align: center;
         align-items: center;
-        background: black;
-
+        margin:10%;
+        list-style-type: none;
+        padding: 10px;
     }
     #menueLittle ul li{
         text-align: center;
         align-content: center;
         width: auto;
         float: none;
+        margin: 20px;
     }
-    li a{
-        display: unset;
+
+    #menueLittle li a{
+        color: #333333;
+        font-size: 20px;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    #menueLittle li a :hover{
+        background-color: #111;
+    }
+    .type1{
+        display:none;
     }
 
 }
