--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,3 +165,16 @@ a {
     }
 
 }
+
+
+#containerProfilepicture {
+    border:1px solid black;
+    height: 140px;
+    width: 140px;
+}
+
+#textProfilepicture {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
