--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,5 +187,16 @@ a {
         padding: 1px;
     }
 
+    #containerProfilepicture {
+        border:1px solid black;
+        height: 140px;
+        width: 140px;
+    }
+
+    #textProfilepicture {
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
 }
 
