--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,22 +181,73 @@ a {
     p {
         font-size: 10px;
     }
+
+    #p {
+        font-size: 16px;
+    }
+
     #content {
         background: #FFF;
         min-height: 288px;
         padding: 1px;
     }
-
-    #containerProfilepicture {
-        border:1px solid black;
-        height: 140px;
-        width: 140px;
-    }
-
-    #textProfilepicture {
-        text-align: center;
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
 }
 
+#containerProfilepicture {
+    border:1px solid black;
+    margin-left: 70px;
+    height: 140px;
+    width: 140px;
+    display: inline-block;
+    float: left;
+}
+
+.textProfilepicture {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#usernameAndPassword {
+    float: left;
+    margin-left: 70px;
+    height: 120px;
+    width: 150px;
+}
+
+#buttonChangePassword {
+    color: white;
+    background: #333;
+    border-style: none;
+    padding: 6px;
+}
+
+#buttonChangePassword:hover {
+    background: black;
+}
+
+.divExperience {
+    float: left;
+    background: #333;
+    width: 30%;
+    height: 120px;
+    text-align: center;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    margin-bottom: 30px;
+}
+
+.divExperience:hover {
+    background: black;
+}
+
+.divExperienceText {
+    color: white;
+}
+
+.buttonsExperience {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border-style: none;
+}
