border - html/css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,24 +34,30 @@ html {
 }
 
 #page {
-    background: #fff;
+    background: #ffffff;
     line-height: 1.5;
     margin: 0 auto;
     max-width: 800px;
     padding: 1em 4em;
     min-width:500px;
+    min-height: 1000px;
 }
 
 #content {
-     background: #FFF;
-     min-height: 500px;
+     background: #ffffff;
+     min-height: 800px;
      padding: 1px;
  }
 
 #footer {
-    background:	#FFF;
-    min-height: 100px;
-    max-height: 100px;
+    background: #333;
+    margin-bottom: 5px;
+    min-height: 50px;
+    max-height: 50px;
+    width: 100%;
+    float:left;
+    bottom: 0;
+    position: fixed;
 }
 
 #menue {
@@ -250,4 +256,11 @@ a {
     height: 100%;
     background: transparent;
     border-style: none;
+}
+
+#searchresults {
+    margin-top: 10px;
+    width: 100%;
+    min-height: 200px;
+    border:1px solid black;
 }
