--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,14 +274,14 @@ a {
     width: 150px;
 }
 
-#buttonChangePassword {
+.buttonChangePassword {
     color: white;
     background: #333;
     border-style: none;
     padding: 6px;
 }
 
-#buttonChangePassword:hover {
+.buttonChangePassword:hover {
     background: black;
 }
 
@@ -330,4 +330,35 @@ a {
     width: 100%;
     min-height: 400px;
     border:1px solid black;
+}
+
+.form {
+    float: left;
+}
+
+#formInputFields {
+    width: 50%;
+}
+
+#textarea {
+    width: 100%;
+    height: 60%;
+}
+
+#buttonCreateBlog {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    color: white;
+    background: #333;
+    border-style: none;
+    padding: 6px;
+    float: right;
+}
+
+#buttonCreateBlog:hover {
+    background: black;
+}
+
+.uploadFileContainer {
+    width: 100%;
 }
