--- a/public/css/style.css
+++ b/public/css/style.css
@@ -353,9 +353,25 @@ a {
     border-style: none;
     padding: 6px;
     float: right;
+    font-size: 16px;
 }
 
 #buttonCreateBlog:hover {
+    background: black;
+}
+
+#buttonCancelBlog {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    color: white;
+    background: #333;
+    border-style: none;
+    padding: 6px;
+    float: left;
+    font-size: 16px;
+}
+
+#buttonCancelBlog:hover {
     background: black;
 }
 
