create new blogs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,3 +378,9 @@ a {
 .uploadFileContainer {
     width: 100%;
 }
+
+.panel-default {
+    border:1px solid black;
+    border-left: 0px;
+    border-right: 0px;
+}
