--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 html {
     background: #fff;
-    font-family: 'Noto Serif TC', serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .picture {
@@ -21,18 +21,18 @@ html {
 }
 
 button {
-    font-family: 'Noto Serif TC', serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .type1 {
     font-size: 20px;
     font-family: sans-serif;
     color: white;
-    padding: 10px;
     margin-right: 70px;
-    margin-top: 15px;
+    margin-top: 21px;
     display: inline-block;
     float: right;
+    padding: 14px 16px;
 }
 
 .type1:hover {
@@ -41,9 +41,9 @@ button {
 
 .type2 {
     font-size: 20px;
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: white;
-    padding: 10px;
+    padding: 14px 16px;
     display: inline-block;
 }
 
@@ -59,7 +59,7 @@ button {
     line-height: 1.5;
     margin: 0 auto;
     max-width: 800px;
-    padding: 1em 4em;
+    padding: 20px 4em;
     min-width:500px;
     min-height: 1000px;
 }
@@ -138,7 +138,7 @@ h2 {
 p {
     color: #545454;
     font-size: 16px;
-    font-family: 'Noto Serif TC', serif;
+    font-family: 'Raleway', serif;
 }
 
 form {
@@ -149,7 +149,7 @@ a {
     text-decoration: none;
     text-align: center;
     color: white;
-    font-family: 'Noto Serif TC', serif;
+    font-family: 'Raleway', serif;
 }
 
 @media screen and ( max-width: 1250px){
