--- a/public/css/style.css
+++ b/public/css/style.css
@@ -401,3 +401,28 @@ a {
     border-left: 0px;
     border-right: 0px;
 }
+
+#deleteBlog {
+    width: 100%;
+    text-align: center;
+}
+
+.button {
+    color: white;
+    background: #333;
+    border-style: none;
+    display: inline-block;
+    padding: 8px 10px;
+    font-size: 1em;
+    font-family: 'Raleway', sans-serif;
+    margin: 5px 5px 0 0;
+    cursor: pointer;
+}
+
+input.button {
+    padding: 11px 10px 10.5px;
+}
+
+.button:hover {
+    background: black;
+}
