--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,9 @@ html {
     max-width: 100%;
     max-height: 100%;
 }
-
+#textred{
+    color: red;
+}
 .searchbox {
     width: 350px;
     height: 40px;
@@ -343,6 +345,7 @@ a {
 
 @media screen and ( max-width: 1250px){
     #menue { display: none; }
+    .buttonLogin { display: none; }
     #menueicon img{
         display: inline;
         background-color: #ffffff;
@@ -394,9 +397,7 @@ a {
         background-color: lightgray;
     }
     .buttonRight{
-        display:none;
-
-
+        float: unset;
     }
 }
 @media screen and (max-width: 630px){
